# Task-On-ZKP

./: Cargo.toml  D_F.kmz  LA_SJ.gpx  README.md  dushanbe.gpx  gps_data.gpx  output.gpx  test_app.kml  trace_output.csv  trace_output.txt
src/: air.rs  gps.rs  info.txt  lib.rs  main.rs  prover.rs  segment.rs  trace.rs  utils.rs  verifier.rs
