[package]
name = "zkp_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
winterfell="0.11.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
criterion = "0.5.1"
winter-utils = "0.11.0"
actix-web = "4.9.0"
winter-crypto = "0.11.0"
# quick-xml = "0.37.1"
chrono = "0.4.38"
gpx = "0.10.0"
quick-xml = { version = "0.37.1", features = ["serialize"] }
time="0.3.36"